K8S筆記/myFirstK8sService/service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # front-end: Note: A Service can map any incoming port to a targetPort. By default and for convenience, the targetPort is set to the same value as the port field
