K8S筆記/myFirstK8sService/ingress.yml
apiVersion: extensions/v1beta1 # 官網寫使用: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test-service
          servicePort: 80
      - path: /health
        backend:
          serviceName: nginx-test-service
          servicePort: 80


# refer notes:
# https://github.com/kubernetes/website/issues/14322
# ingress在networking.k8s.io有bug，無法正常運作
